Update footnote alignment. https://github.com/srophe/syriac-corpus-app/issues/83

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -419,9 +419,9 @@ td {
 .relation .results-list-desc.uri{margin-left:0; }
 
 /* footnote styles */
-.footnotes {display:block;border-top: 1px dotted gray; text-align:left;}
+.footnotes {display:block;border-top: 1px dotted gray; text-align:right;}
 .footnote-text {display:block;}
-.footnote-text .footnote-refs {font-size: .75em; border:1px solid red;}
+.footnote-text .footnote-refs {font-size: .75em;}
 .footnote-refs, .footnote-tgt {
     font-size: .5em;
     line-height: 0.5em;
